K8sManifests/BackendDep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # namespace: 3-tier-app-eks
  name: backend-deployment
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: 384747603695.dkr.ecr.us-east-1.amazonaws.com/hendawy-ecr-back:latest
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: backend-storage
          mountPath: /app/data
      volumes:
      - name: backend-storage
        persistentVolumeClaim:
          claimName: my-ebs-pvc
