K8sManifests/BackendService.yaml
apiVersion: v1
kind: Service
metadata:
  # namespace: 3-tier-app-eks
  name: backend-service
spec:
  selector:
    app: backend
  ports:
  - name: metrics
    protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
