K8sManifests/RedisSvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  # namespace: 3-tier-app-eks
  labels:
    app: redis
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
