K8sManifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 3-tier-app-ingress
  # namespace: 3-tier-app-eks
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hendawyy.zaboyzz.com
      secretName: hendawy-tls-secret
  rules:
    - host: hendawyy.zaboyzz.com
      http:
        paths:
          # Frontend app
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          # Backend API: handles /api/* routes, including /mysql and /redis
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

          # Optional: direct match if backend doesn't use /api prefix
          - path: /mysql
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000

          - path: /redis
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 3000
